tests-integration/tests/roundtrip/sequences/attributes/minMaxSize-injective/via-conjure.expected-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/sequences/attributes/minMaxSize-injective/input.essence:1:53:
  |
1 | find x : sequence (minSize 2, maxSize 3, injective) int(1..3)
  |                                                     ^
Missing of

